[package]
name = "back_ja7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
sea-orm = "0.12.15"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"] }
