[package]
name = "back_ja7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = "0.4.37"
dotenv = "0.15.0"
sea-orm = {version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"] }
validator = {version = "0.17.0", features = ["derive"] }
